Fix: Prevent wrapping of radio options onto second line in very small width devices
It appears to need one additional pixel

--- a/app/assets/stylesheets/layout/grids/search_result_grid.scss
+++ b/app/assets/stylesheets/layout/grids/search_result_grid.scss
@@ -92,7 +92,7 @@
 
     .row_of_options {
       // Prevent wrapping of radio options onto second line in very small width devices (sub 385px)
-      min-width: 320px;
+      min-width: 321px;
     }
 
     #conditions_special_filing_input label {
